contactPage.css
html, body{
    margin: 0;
    padding: 0;
    height: 100%;
}
.homePage-background{
    position: relative;
    height: 100vh;
    overflow: hidden;
    display: flex;
    align-items: flex-end;
    justify-content: flex-start;
    color: #fff;
    margin: 0;
    padding: 0;
    top: -160px;
}

.bg-image{
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    width: 100%;
    height: 80%;
    background: url("images/massimo-adami-zEy5QBUBmRE-unsplash\ \(1\).jpg")center center/cover no-repeat;
    transform: scale(1);
    transform-origin: center center;
    z-index: 1;
}

/*changing the footer*/
main {
    min-height: 303vh;
    background: #f6f7fb;
    
}

/*Contact Page heading*/
.contact-heading{
    opacity: 0;
    transform: translateY(140px);
    font-size: 140px;
    font-weight: bold;
    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
    background: linear-gradient(to bottom, white 50%, rgb(122, 0, 43) 50%);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    -webkit-text-stroke: 1px white;
    display: inline-block;
    margin-left: 40px;
    margin-bottom: 72px;
    z-index: 1;
}

/* SVG MotionPath work*/
#svg-container{
    height: 700px;
    width: 710px;
    display: flex;
    top: 50%;
    left: 50%;
    transform: translate(35%, -7%);
}

#map{
    width: 710px;
    height: 700px;
    border-radius: 10px;
    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
    overflow: visible;
}


/*Black Address box with its info*/
.address-section{
    height: 375px;
    width: 425px;
    border: 1px solid black;
    background-color: black;
    top: 50%;
    left: 50%;
    transform: translate(228%, -200%);
}

.address-section h2{
    font-size: 28px;
    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
    color: rgb(250, 230, 206);
    padding: 35px;
}

#address-links, address{
    font-size: 20px;
    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
    color: beige;
    font-style: normal;
    text-decoration: none;
    padding: 10px 35px;
}

#address-links{
    padding: 2px;
}

.address-section p{
    font-size: 20px;
    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
    color: beige;
    padding: 10px 35px;
}

.address-section button{
    height: 40px;
    width: 110px;
    font-size: 15px;
    color: beige;
    border-radius: 25px;
    border: 1px solid beige;
    background-color: transparent;
    cursor: pointer;
    margin-left: 35px;
    margin-top: 15px;
}

.address-section button:hover{
    color: black;
    background-color: beige;
}

/*Contact form*/
.contact-form{
    height: 430px;
    width: 80rem;
    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
    background-color: rgb(227, 215, 199);
    margin-left: 200px;
    margin-top: -310px;
    padding: 30px 40px;
}

.form-heading {
    font-size: 28px;
    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
    color: rgb(96, 94, 94); 
    margin-bottom: 15px;
}

.form-group{
    margin-bottom: 22px;
    position: relative;
}

.form-group label {
    display: block;
    margin-bottom: 5px;
    font-weight: bold;
}

.form-group input, 
.form-group textarea{
    width: 100%;
    padding: 10px;
    border: 2px solid #ccc;
    font-size: 14px;
    transition: border-color 0.3s;
}

.form-group input:focus,
.form-group textarea:focus{
    outline: none;
    border-color: #007BFF;
}

.form-group.success input,
.form-group.success textarea{
    border-color: #28a745;
}

.form-group.error input,
.form-group.error textarea{
    border-color: #dc3545;
}

.form-group small {
    color: #dc3545;
    position: absolute;
    bottom: -18px;
    left: 0;
    font-size: 12px;
    visibility: hidden;
}

.form-group.success small{
    color: #28a745;
    visibility: visible;
}

.form-group.error small{
    visibility: visible;
}

.submit-btn{
    width: 100px;
    height: 40px;
    background: #000;
    color: beige;
    font-size: 16px;
    border: none;
    border-radius: 25px;
    cursor: pointer;
    transition: background 0.3;
    padding: 12px 28px;
}

.submit-btn:hover{
    background: #E77291;
    color: black;
}

.btn-wrap{
    display:flex;
    justify-content: flex-end;
    margin-top: -80px;
}

#successMessage{
    display: none;
    color: #28a745;
    font-weight: 600;
    margin-top: 15px;
    text-align: right;
}

#charCount{
    text-align: right;
    font-size: 12px;
    margin-top: 5px;
    color: #666;
}

.form-columns{
    display: flex;
    gap:25px
}

.left-col, 
.right-col{
    width:50%;
}

.left-col .form-group,
.right-col .form-group{
    width: 100%;
}

@media(max-width:700px){
    .form-columns{
        flex-direction:column;
        height: 100%;
    }

    .left-col, .right-col{
        width: 100%;
    }
}

/*Klava svg signiture*/
.klava-signature{
    height: 200px;
    width: 600px;
    margin-left: 500px;
    margin-top: 140px;
}

#svg-signature{
    width: 600px;
    height: 200px;
    display: block;
}

 #signature{
    fill: none;
    stroke: #000;
    stroke-width: 3;
 }

